{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 66,
  "lineage": "cee581b7-cb62-1c93-a4db-48e15da64b49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0573b70afecda915d",
            "arn": "arn:aws:ec2:us-west-1:308711700336:instance/i-0cb7ed6cb807dfcc5",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb7ed6cb807dfcc5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d79c6c1948fff5a8",
            "private_dns": "ip-10-0-1-91.us-west-1.compute.internal",
            "private_ip": "10.0.1.91",
            "public_ip": "52.53.162.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ecea6bc356528f4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093f9b368b641a3d7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a211a7677f1c519f"
            ]
          },
          "depends_on": [
            "aws_security_group.redsg1",
            "aws_subnet.Redsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:308711700336:internet-gateway/igw-055565bfeda0fbe1c",
            "id": "igw-055565bfeda0fbe1c",
            "owner_id": "308711700336",
            "vpc_id": "vpc-0508bf00094f7f13e"
          },
          "depends_on": [
            "aws_vpc.redvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:308711700336:route-table/rtb-04246f870c1fb2b59",
            "id": "rtb-04246f870c1fb2b59",
            "owner_id": "308711700336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055565bfeda0fbe1c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0508bf00094f7f13e"
          },
          "depends_on": [
            "aws_internet_gateway.myigw",
            "aws_vpc.redvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Redrttosubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f109c7082f09787d",
            "route_table_id": "rtb-04246f870c1fb2b59",
            "subnet_id": "subnet-093f9b368b641a3d7"
          },
          "depends_on": [
            "aws_route_table.redRT",
            "aws_subnet.Redsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redsg1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:308711700336:security-group/sg-0a211a7677f1c519f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a211a7677f1c519f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220226075430957100000001",
            "name_prefix": "terraform-",
            "owner_id": "308711700336",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0508bf00094f7f13e"
          },
          "depends_on": [
            "aws_vpc.redvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Redsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:308711700336:subnet/subnet-093f9b368b641a3d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-093f9b368b641a3d7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "308711700336",
            "tags": {
              "Name": "production-subnet"
            },
            "tags_all": {
              "Name": "production-subnet"
            },
            "vpc_id": "vpc-0508bf00094f7f13e"
          },
          "depends_on": [
            "aws_vpc.redvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "redvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:308711700336:vpc/vpc-0508bf00094f7f13e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0158db6e34f18157a",
            "default_route_table_id": "rtb-086addedb0c1a33f0",
            "default_security_group_id": "sg-08c95fea04b0415bc",
            "dhcp_options_id": "dopt-2ebb6c48",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0508bf00094f7f13e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-086addedb0c1a33f0",
            "owner_id": "308711700336",
            "tags": {
              "Name": "production-VPC"
            },
            "tags_all": {
              "Name": "production-VPC"
            }
          }
        }
      ]
    }
  ]
}